syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint.airbyte;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint/airbyte;tm_server_airbyte_endpoint";

import "yandex/cloud/priv/sensitive.proto";

message BigQuerySource {
    string project_id = 1;
    string dataset_id = 2;
    string credentials_json = 3 [(sensitive) = true];
}
